[package]
name = "mycorust"
version = "0.1.0"
authors = ["ezeoleaf"]
edition = "2021"

[features]
default = ["ui"]
ui = ["macroquad", "image"]

[dependencies]
# UI dependencies (optional)
macroquad = { version = "0.4.14", optional = true }
image = { version = "0.24", optional = true }

# Core dependencies
rand = "0.8"
rayon = "1.8" # For parallel processing

# Headless mode dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9" # For config file support
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.4", features = ["derive"] }
